CenterLine/exp/line/rand_line_medium_4cat/script/log/452032_.err
Traceback (most recent call last):
  File "main.py", line 16, in <module>
    from trains.train_factory import train_factory
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/trains/train_factory.py", line 5, in <module>
    from .line import LineTrainer
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/trains/line.py", line 112
    debugger.add_lines(dets[i, k, :4], dets[i, k, -1],="out_pred")
                                                      ^
SyntaxError: invalid syntax
Traceback (most recent call last):
  File "test.py", line 61, in <module>
    test(opt)
  File "test.py", line 33, in test
    detector = Detector(opt)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/detectors/line.py", line 26, in __init__
    super(LineDetector, self).__init__(opt)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/detectors/base_detector.py", line 25, in __init__
    self.model = load_model(self.model, opt.load_model)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/models/model.py", line 31, in load_model
    checkpoint = torch.load(model_path, map_location=lambda storage, loc: storage)
  File "/scratch_net/biwidl213/silvasta/apps/Conda/conda_envs/CenterNet/lib/python3.6/site-packages/torch/serialization.py", line 356, in load
    f = open(f, 'rb')
FileNotFoundError: [Errno 2] No such file or directory: '/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/../../exp/line/rand_line_medium_4cat/model_last.pth'
Traceback (most recent call last):
  File "demo.py", line 57, in <module>
    demo(opt)
  File "demo.py", line 21, in demo
    detector = Detector(opt)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/detectors/line.py", line 26, in __init__
    super(LineDetector, self).__init__(opt)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/detectors/base_detector.py", line 25, in __init__
    self.model = load_model(self.model, opt.load_model)
  File "/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/models/model.py", line 31, in load_model
    checkpoint = torch.load(model_path, map_location=lambda storage, loc: storage)
  File "/scratch_net/biwidl213/silvasta/apps/Conda/conda_envs/CenterNet/lib/python3.6/site-packages/torch/serialization.py", line 356, in load
    f = open(f, 'rb')
FileNotFoundError: [Errno 2] No such file or directory: '/scratch_net/biwidl213/silvasta/bachelor-thesis-line-detection/CenterLine/src/lib/../../exp/line/default/model_last.pth'
